Update loggers to use commons logging APIs rather than Log4J. #573