@@ -3,8 +3,10 @@ description = 'SiteWhere Schedule Management Microservice'
 dependencies {
 	compile project(':sitewhere-core')
 	compile project(':sitewhere-mongodb')
-	compile project(':sitewhere-hbase')
 	compile project(':sitewhere-microservice')
+	
+	// HBase not currently supported.
+	compileOnly project(':sitewhere-hbase')
 	
     compile group: 'org.quartz-scheduler', name: 'quartz', version:'2.2.2'
 }
@@ -24,7 +26,7 @@ task dockerFile(type: com.bmuschko.gradle.docker.tasks.image.Dockerfile, depends
 	copyFile("${project.name}-${project.version}.jar", "/")
 
 	// Run Java command to start application.
-	defaultCommand 'java', "-Xmx${rootProject.ext['docker.java.memory']}", '-jar', "/${project.name}-${project.version}.jar"
+	defaultCommand 'java', '-Xmx768M', '-XX:+UnlockExperimentalVMOptions', '-XX:+UseCGroupMemoryLimitForHeap', '-jar', "/${project.name}-${project.version}.jar"
 }
 
 // Copy artifacts to Docker input folder.
